[package]
name = "rust-advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

[[bin]]
name = "01"
path = "src/01/01.rs"

[[bin]]
name = "02"
path = "src/02/02.rs"

[[bin]]
name = "03"
path = "src/03/03.rs"

[[bin]]
name = "04"
path = "src/04/04.rs"

[[bin]]
name = "05"
path = "src/05/05.rs"

[[bin]]
name = "07"
path = "src/07/07.rs"

[[bin]]
name = "08"
path = "src/08/08.rs"

[[bin]]
name = "09"
path = "src/09/09.rs"

[[bin]]
name = "10"
path = "src/10/10.rs"
